Mission statement index and styling

--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,17 @@ nav li {
 nav li a {
   color: inherit;
 }
+
+/* Mission */
+#mission {
+  margin: 0 auto;
+  padding-top: 69px;
+  height: 700px;
+  max-width: 1200px;
+  background-image: url("../assets/img-mission-background.jpg");
+  background-repeat: no-repeat;
+  /* Flex properties */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
