--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,25 @@ body {
   text-align: center;
 }
 
+h1,h2,h3,h4 {
+  font-weight: bold;
+  background-color: black;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.3rem;
+}
+
+h3 {
+  font-size: 1.1rem;
+}
+
+
 /* Header & Nav bar */
 header {
   border-bottom: 1px solid seashell;
