Add styling to flex container

--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,18 @@ section {
   margin: 0 auto;
 }
 
+/* Flex containers */
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.box {
+  width: 300px;
+}
+.box img {
+  width: 300px;
+  height: 200px;
+}
