Remove background and opacity on Locations header

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ nav li a {
 .box {
   width: 300px;
   margin: 15px;
+  background-color: var(--main-bg-color);
 }
 .box img {
   margin: auto;
@@ -108,6 +109,11 @@ section {
   justify-content: center;
 }
 
+#mission h2, #mission h4 {
+  background-color: var(--main-bg-color);
+  opacity: var(--main-opacity);
+}
+
 #featured {
   max-width: 1000px;
 }
@@ -115,10 +121,4 @@ section {
 #locations {
   height: 500px;
   background: url("../assets/img-locations-background.jpg") no-repeat center;
-}
-
-#mission h2, #mission h4, #locations h2 {
-  background-color: var(--main-bg-color);
-  opacity: var(--main-opacity);
-
 }
