--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ section {
   margin: 2rem auto;
   box-sizing: border-box;
   max-width: 1200px;
+  min-height: 200px;
 }
 
 /* Sections */
@@ -132,4 +133,16 @@ section {
   display: flex;
   flex-flow: column;
   justify-content: center;
+}
+
+#contact {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
+
+#contact a {
+  font-weight: bold;
+  color: inherit;
+  text-decoration: none;
 }
