Styling footer section and amending styling on contact section

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
 }
 
-h1,h2,h3,h4 {
+h1,h2,h3,h4,h5 {
   font-weight: bold;
   padding: 1rem;
 }
@@ -27,9 +27,12 @@ h2 {
 }
 
 h3 {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
+h4 {
+  font-size: 1.1rem;
+}
 
 /* Header & Nav bar */
 header {
@@ -96,13 +99,10 @@ nav li a {
   padding: 1rem 0;
 }
 
-
-
 section {
   margin: 2rem auto;
   box-sizing: border-box;
   max-width: 1200px;
-  min-height: 200px;
 }
 
 /* Sections */
@@ -139,10 +139,19 @@ section {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  margin: auto;
+  height: 200px;
 }
 
 #contact a {
-  font-weight: bold;
   color: inherit;
   text-decoration: none;
 }
+
+/* Footer */
+ footer {
+   text-align: left;
+   padding: 20px;
+ }
+
+ h5
