Remove specific font sizing on headers (use defaults)

--- a/css/style.css
+++ b/css/style.css
@@ -15,25 +15,8 @@ body {
   text-align: center;
 }
 
-h1,h2,h3,h4,h5 {
-  font-weight: bold;
-  padding: 1rem;
-}
-
-h1 {
-  font-size: 2rem;
-}
-
-h2 {
-  font-size: 1.5rem;
-}
-
-h3 {
-  font-size: 1.3rem;
-}
-
-h4 {
-  font-size: 1.1rem;
+h2, h3, h4 {
+  padding: 10px;
 }
 
 /* Header & Nav bar */
